 /* $Id: ChangeLog,v 1.616 2000-01-07 00:25:58 sandervl Exp $ */

 2000-01-06: Sander van Leeuwen <sandervl@xs4all.nl>
	- ADVAPI32: Implemented StartServiceCtrlDispatcherA/W
                    Faked RegisterServiceCtrlHandlerA/W (TODO)
                    Partly implemented SetServiceBits/SetServiceStatus
                    Improved QueryServiceStatus
                    Call RtlCreateAcl in InitializeAcl
	- LZ32: Create correct library
	- CRTDLL: Fixed CRTDLL__wcsnicmp (use Wine version)
	- VERSION: Fixed VerQueryValue32A and merged with latest Wine sources
                   (991212) (-> fixes errors in RealPlayer)
	- USER32: GetMenuStringA fix (return length of string if string pointer
                  or size parameter == 0)

 2000-01-05: Jens Wiessner <wiessnej@rfi.de>
	- TWAIN_32: Update

 2000-01-05: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32/NEW: single window works now

 2000-01-05: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32/NTDLL: Partially implemented NtOpenThreadToken
                          (should be changed)
                          MS Office 2000 install (first part) almost working.
                          (installs windows installer as system service)
	- OLEAUT32: Typelib bugfix for MS Office 2k install
	- odin_ini.txt: Added information about CODEPAGES & TWAIN section

 2000-01-05: David Raison <djr@lemur.co.uk>
        - OLEAUT32: LHashValOfNameSys(A)

 2000-01-04: Jens Wiessner <wiessnej@rfi.de>
	- TWAIN_32: Created twain dll for usage with CFM Twain for OS/2.

 2000-01-04: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: InsertMenu bugfix (RealPlayer calls InsertMenu with flag 0 & pos -1)
                  Delete old region in SetWindowRegion

 2000-01-03: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- KERNEL32: Named pipe updates & bugfixes

 2000-01-03: Jens Wiessner <wiessnej@rfi.de>
	- LZ32/TAPI32: Updated def files to match NT 4 SP6
	- MSVCRT: Updated def files + MSVCRT40 version info