@@ -1,4 +1,7 @@
- /* $Id: ChangeLog,v 1.616 2000-01-07 00:25:58 sandervl Exp $ */
+ /* $Id: ChangeLog,v 1.617 2000-01-07 17:36:05 cbratschi Exp $ */
+
+ 2000-01-06: Christoph Bratschi <cbratschi@datacomm.ch>
+	- GDI32: added PatBlt support for negative width/height
 
  2000-01-06: Sander van Leeuwen <sandervl@xs4all.nl>
 	- ADVAPI32: Implemented StartServiceCtrlDispatcherA/W
